API acabada. Comprovada que les ids que es passen com a paràmetres existeixen o no
